# notebooks

./: .current_notebook  .current_notebook_ryder  .current_notebook_system  .current_notebook_tmobile  CLAUDE.md  README.md  account_rcra.py  fedex_rcra.py  front_modeling.py  genesis_chemical_investigation.py  genesis_chemical_search_results.md  gong_calls_analysis.ipynb  gong_calls_analysis.py  gov_data.py  industry_benchmarking.py  justfile  pyproject.toml  ryder_campaign.py  ryder_internal_analysis.py  ryder_query_dev.py  ryder_rcra_query.sql  snapshot.md  tmobile_campaign.py
.claude/: settings.local.json
__marimo__/: front_modeling.html  gong_calls_analysis.ipynb
docs/: marimo_readme.md
logs/: front_modeling.html  gong_calls_analysis.html  ryder_campaign.html  test_export.html  tmobile_campaign.html
utils/: CLAUDE.md  README.md  __init__.py  marimo_parser.py
working_context/: rcra-queries.md
