[project]
name = "notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.57.1",
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.1.1",
    "google-genai>=1.25.0",
    "marimo[recommended,sql]>=0.14.10",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.0.0",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
]

[project.scripts]
# Marimo development utilities
marimo-dev = "utils.marimo_parser:main"
marimo-demo = "utils.marimo_parser_demo:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["utils*"]
exclude = ["data*", "db*", "layouts*", "lib_docs*", "debug_context*"]

[tool.marimo]
[tool.marimo.runtime]
watcher_on_save = "autorun"
on_cell_change = "autorun"
auto_instantiate = true
auto_reload = "lazy"
default_sql_output = "auto"
reactive_tests = true
std_stream_max_bytes = 1000000
output_max_bytes = 8000000

[tool.marimo.server]
follow_symlink = true

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = false
